--- a/portal/templates/initial_queries.html
+++ b/portal/templates/initial_queries.html
@@ -5,9 +5,9 @@
 {% from "initial_queries_macros.html" import tou, nameGroup, rolesGroup, dobGroup, patientQGroup, clinic %}
 
 
-  <div id="loadingIndicator" class="loading-indicator">
+  <!-- <div id="loadingIndicator" class="loading-indicator">
     <i class="fa fa-circle-o-notch fa-spin fa-4x"></i>
-  </div>
+  </div> -->
   <input type="hidden" id="iq_userId" value="{{user.id}}" />
 
   {% if 'tou' in still_needed %}
