--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -67,7 +67,12 @@ body {
 }
 
 #mainDiv {
-  /*margin-top: 22px;*/
+  visibility: hidden;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
+  filter: alpha(opacity=0);
+  -moz-opacity: 0;
+  -khtml-opacity: 0;
+  opacity: 0;
 }
 
 a {
@@ -584,18 +589,47 @@ table.profile-audit-log TH {
   text-align: left;
 }
 
-/** styles specific to profile **/
-.loading-indicator {
-  display: none;
+/*.loading-indicator {*/
+#loadingIndicator{
+  /*display: none;*/
   position: fixed;
-  top: 200px;
-  left: 48%;
-  margin-left: -50px;
-  width: 100px;
-  height: 100px;
+  /*top: 200px;
+  left: 48%;*/
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 2em;
+  width: 2em;
+  overflow: show;
+  /*margin-left: -50px;*/
+  /*width: 100px;
+  height: 100px;*/
+  font-size: 1em;
   text-align: center;
   z-index: 99999;
   color: #444;
+  margin: auto;
+  /*-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+  filter: alpha(opacity=80);
+  -moz-opacity: 0.8;
+  -khtml-opacity: 0.8;
+  opacity: 0.8;*/
+}
+#loadingIndicator:before {
+  content: ' ';
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.3);
+}
+
+
+#loadingIndicator i {
+  font-size: 1em;
 }
 .loading {
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
