--- a/portal/templates/layout.html
+++ b/portal/templates/layout.html
@@ -39,7 +39,7 @@
 
 <body>
     <div id="loadingIndicator" class="loading-indicator">
-        Loading... &nbsp;<i class="fa fa-circle-o-notch fa-spin fa-4x"></i>
+        Loading... &nbsp;<!--<i class="fa fa-circle-o-notch fa-spin fa-4x"></i>-->
     </div>
     {# portal_wrapper loads in mainNav here. Hide completely on splashView pages #}
     <div id="mainNav" {% if splashView %}class="hidden"{% endif %}>
