fix race and ethnicity not saving issue on profile page

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -7,11 +7,11 @@
 **/
 
 @baseFontSize:    18px;
-@headlineSize:    1.375em;
-@subheadSize:     1.250em;
+@headlineSize:    1.25em;
+@subheadSize:     1.20em;
 @lgFontSize:      1.8em;
-@lgHeadlineSize:  1.35em;
-@lgsubheadSize:   1.2em;
+@lgHeadlineSize:  1.30em;
+@lgsubheadSize:   1.20em;
 @smallerText:     0.85em;
 @btnSize:         1em;
 @legendSize:      1em;
@@ -635,6 +635,7 @@ table.profile-audit-log TH {
   left: 0;
   width: 100%;
   height: 100%;
+  background-color: #FFFF; /* for browsers that don't support rgba color*/
   background-color: rgba(0,0,0, 0.15);
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
   filter: alpha(opacity=60);
