--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -42,7 +42,6 @@ body {
 #mainNav {
   height: 71px;
 }
-
 #tnthNavWrapper {
   /*display: none;*/
   display:block;
@@ -65,10 +64,10 @@ a.btn {
 }
 .tnth-headline {
   margin: 30px 0 20px;
-  font-size: 1.375em;
+  font-size: 1.25em;
 }
 .tnth-subhead {
-  font-size: 1.25em;
+  font-size: 1.20em;
 }
 .smaller-text {
   font-size: 0.85em;
@@ -555,6 +554,7 @@ table.profile-audit-log TH {
   left: 0;
   width: 100%;
   height: 100%;
+  background-color: #FFFF; /*for browsers that don't suppor rbga color*/
   background-color: rgba(0,0,0, 0.15);
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
   filter: alpha(opacity=60);
@@ -850,7 +850,7 @@ sub.pointer:hover {
     font-size: 1.8em;
   }
   .tnth-headline {
-    font-size: 1.35em;
+    font-size: 1.30em;
   }
   .tnth-subhead {
     font-size: 1.2em;
