--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -26,10 +26,10 @@
 @linkHover:       #2a4531;
 @btnColor:        #79815D;
 @legendColor:    #595F57;
-@sectionColor:    rgba(173, 193, 197, 0.14);
+@sectionColor:    rgba(173, 193, 197, 0.16);
 @sectionTitleColor: #575F5C;
 @sectionBorderColor: #E0E6E3;
-
+@rowBackgroundColor: #7d826e;
 
 
 html {
@@ -49,7 +49,7 @@ body {
   font-family: "Helvetica Neue Light", "Helvetica Neue", Arial, sans-serif;
   color: @baseColor;
   font-size: @baseFontSize;
-  transition: all 500ms;
+  transition: all 500ms ease-in;
 }
 
 #mainHolder {
@@ -63,16 +63,6 @@ body {
   transition: visibility 0.5s, opacity 0.3s ease-in;
 }
 
-#mainHolder {
-  visibility: hidden;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
-  filter: alpha(opacity=0);
-  -moz-opacity: 0;
-  -khtml-opacity: 0;
-  opacity: 0;
-  -webkit-transition: visibility 0.5s, opacity 0.3s ease-in;
-  transition: visibility 0.5s, opacity 0.3s ease-in;
-}
 /** Spacing for mainNav area so rest of page that doesn't get pushed down if portal_wrapper takes awhile to load **/
 #mainNav {
   height: 71px;
@@ -427,6 +417,7 @@ a.btn {
 }
 
 .profile-item-container {
+  background-color: #EFF5F3;
   background-color: @sectionColor;
   padding: 1.5em 2em;
   border-radius: 8px;
@@ -434,6 +425,7 @@ a.btn {
   border: 1px solid @sectionBorderColor;
   overflow-y: hidden;
   overflow-x: hidden;
+  padding: 1em;
 }
 
 .profile-item-title {
@@ -503,11 +495,6 @@ input.clinic {
   }
 }
 
-.profile-audit-log {
-  border-color: #57675B;
-  font-size: 0.9em;
-}
-
 .create-account-container {
   padding: 3.5em 4em;
   width: 90%;
@@ -533,6 +520,13 @@ input.clinic {
   margin-left:0.5em;
 }
 
+#userSessionReportDetailTable {
+  margin-left: -1%;
+}
+
+#userSessionReportDetailTable caption {
+  padding: 0;
+}
 
 #userSessionsList {
   font-size: @sessionListSize;
@@ -542,8 +536,36 @@ input.clinic {
   margin-bottom: 6px;
 }
 
+#userSessionListTable {
+  font-size: 0.98em
+}
+
+
+#userSessionListTable TH, table.profile-audit-log TH, .thead {
+  background-color: @rowBackgroundColor;
+  color: #FFF;
+  padding: 0.25em 0.5em;
+  font-size: 1em;
+  font-weight: normal;
+  font-size: 0.98em;
+}
+
+#userSessionListTable TR:hover {
+  color: #6C7A72;
+  background-color: #ddd;
+  cursor: pointer;
+}
+
+#userSessionListTable .odd {
+  background-color: #F2F2F2;
+}
+#userSessionListTable .even {
+  background-color: #FFF;
+}
+
 #userAssessementReport table {
   word-break:break-all;
+  font-size: 0.94em;
 }
 
 #termsText {
@@ -551,6 +573,12 @@ input.clinic {
 }
 #agreeLabel {
   margin-left: 2em;
+}
+
+
+#createProfileForm #phone, #createProfileForm #email {
+    width: 350px;
+    max-width: 100%;
 }
 
 .create-user-link {
@@ -562,22 +590,13 @@ input.clinic {
   -moz-box-shadow: 10px 10px 10px -9px rgba(239,242,239,1);
   box-shadow: 10px 10px 10px -9px rgba(239,242,239,1);
   padding: 0.5em;
+  transition: all 300ms ease-in;
 }
 
 .profile-header {
   width:45%;
   max-width: 100%;
 }
-
-.profile-audit-log {
-  border-color: #57675B;
-  font-size: 0.87em;
-}
-
-table.profile-audit-log TH {
-  background-color: #FFF;
-}
-
 .profile-section {
   margin-bottom: 1.5em;
   overflow-y: auto;
@@ -590,14 +609,23 @@ table.profile-audit-log TH {
   margin-top: 4px;
 }
 
-#phone, #email {
-  width: 300px;
-  max-width: 100%;
+.profile-audit-log {
+  border-color: #57675B;
+  font-size: 0.87em;
 }
-.error-message {
+
+.error-message, .report-error-message {
   padding: 0.5em;
   border-radius: 4px;
   text-align: left;
+}
+
+.report-error-message {
+  color: red;
+  background-color: #f5f5f5;
+  margin-left: 8px;
+  display: none;
+  font-size: 1em;
 }
 
 /*.loading-indicator {*/
@@ -827,6 +855,20 @@ sub.pointer:hover {
   color: #79815D;
 }
 
+.gradient {
+  background-image:
+    linear-gradient(
+      to top right, 
+      #FFF, #e1e2e1
+    );
+}
+
+.custom-header {
+  margin-left: 12px; 
+  padding: 0.3em 0.5em; 
+  border-radius: 4px; 
+  border: 1px solid #f5f5f5
+}
 
 /** Responsive sizes **/
 @media (max-width: 480px) {
@@ -866,14 +908,15 @@ sub.pointer:hover {
   #userSessionsList {
     font-size: 0.85em;
   }
-  .profile-item-container {
-    overflow-y: auto;
-    padding: 1em;
-  }
+  
   .side {
     height: 27em;
   }
 
+  #phone, #email {
+    width: 100%;
+    max-width: 100%
+  }
 
   .form-control {
     height: 34px;
@@ -884,6 +927,9 @@ sub.pointer:hover {
   .radio input[type=radio],
   .radio-inline input[type=radio] {
     margin-top: 2px;
+  }
+  table.profile-audit-log {
+    font-size: 0.7em;
   }
 }
 
