--- a/portal/templates/sessionReport.html
+++ b/portal/templates/sessionReport.html
@@ -6,8 +6,13 @@
 <br/>
 
 <div  class="tnth-headline custom-header gradient">
+	<span class="left">
 	<h4>Assessment Report Detail</h4>
 	<h4 class="text-muted">Patient #{{user.id}} - {{user.first_name}}  {{user.last_name}}</h4>
+	</span>
+	<span class="right">
+		<a href="{{url_for('patients.patient_profile', patient_id=user.id) }}" class="btn btn-xs btn-tnth-back" title="Back to Patient Profile"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></a> / <a href="{{PORTAL}}/home" title="Back to Truenth Home"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a>
+	</span>
 	
 </div>
 <div class="report-error-message">Unable to load report</div>
@@ -18,9 +23,10 @@
 	       	{{profileAssessment(user, instrument_id)}}
 	 
 	        <br />
-
+	        <!--
 	        <a href="{{ url_for('patients.patient_profile', patient_id=user.id) }}" class="btn btn-xs btn-tnth-back"><small><i class="fa fa-chevron-left"></i> Back to Profile</small></a>
 	        <br/>
+	        -->
 	        <!--
 	        <a href="{{PORTAL}}/home" class="btn btn-xs btn-tnth-back"><small><i class="fa fa-chevron-left"></i> Back to Home</small></a>
 	        -->
