--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -487,10 +487,6 @@
 	    </div>
 	    <script>
 
-            function goToReport(obj) {
-                window.document.location = $(obj).attr("href");
-            };
-
             $(function () {
 
 	    	var sessionListHTML = "";
@@ -513,7 +509,7 @@
                                                 [entry['questionnaire']['display'], 
                                                  entry['status'], 
                                                  String(entry['authored']).replace(/[tz]/gi, ' ')].map(function(o) {
-                                                    return  '<td><a href="' + reportLink + '" onclick="goToReport(this)">' + o + '</a></td>'
+                                                    return  '<td><a href="' + reportLink + '">' + o + '</a></td>'
                                                  }).join('') + 
                                                  '</tr>';
 
