add function to convert GMT time to local time in audit and session list tables in profile, css fixes for assessment report

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -533,6 +533,11 @@ border-left: 1px solid #ddd;
 border-top: 1px solid #ddd;
 border-radius: 2px;
 padding: 0.2em;
+-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+filter: alpha(opacity=80);
+-moz-opacity: 0.8;
+-khtml-opacity: 0.8;
+opacity: 0.8;
 }
 #userSessionReportDetailHeader span.glyphicon:hover
 {
@@ -882,7 +887,7 @@ sub.pointer:hover {
     );
 }
 
-.custom-header {
+.report-custom-header {
   padding: 0.3em 0.5em;
   border-radius: 4px;
   border-left: 2px solid #f5f5f5;
@@ -893,11 +898,11 @@ sub.pointer:hover {
   height: 86px;
 }
 
-.custom-header .left {
+.report-custom-header .left {
 float:left;
 }
 
-.custom-header .right {
+.report-custom-header .right {
 float:right; padding-top:1%; 
 position: relative; 
 z-index: 88; 
