--- a/portal/templates/sessionReport.html
+++ b/portal/templates/sessionReport.html
@@ -5,7 +5,7 @@
 
 <br/>
 
-<div  id="userSessionReportDetailHeader" class="tnth-headline custom-header gradient">
+<div  id="userSessionReportDetailHeader" class="tnth-headline report-custom-header gradient">
 	<span class="left">
 	<h4>Assessment Report Detail</h4>
 	<h4 class="text-muted">Patient #{{user.id}} - {{user.first_name}}  {{user.last_name}}</h4>
