--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -2,11 +2,12 @@
 {% block main %}
 <div id="patientList" class="reduce-font-sizes">
 
-<h3 class="tnth-headline">Patient List</h3>
-
+<div class="custom-header gradient" style="margin-top: 1em; height: 130px">
+<h4 class="tnth-headline">Patient List</h4>
+<h5 class="text-muted" style="margin-left:1em; margin-top:-10px; font-size:0.90em">By Organization Affliciation/Clinics</h5>
+</div>
 <br/>
-
-<div><a  href="{{ url_for('patients.profile_create') }}"><button class="create-user-link btn btn-lg btn-tnth-primary">Create a patient record</button></a> or select a patient below to view or update details.<hr/></div>
+<div><a  href="{{ url_for('patients.profile_create') }}"><button class="create-user-link btn btn-lg btn-tnth-primary">Create a patient record</button></a> or select a patient below to view or update details.</div>
 
 
 {% if patients_by_org|length > 1 %}
