Remove Registration card from portal.html via JS and css - EPROMs specific

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -28,6 +28,9 @@ body {
   font-size: 18px;
   transition: all 500ms ease-in;
 }
+.registration-container {
+  display: none;
+}
 #mainHolder {
   visibility: hidden;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
