--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -52,6 +52,10 @@ body {
   transition: all 500ms ease-in;
 }
 
+.registration-container {
+  display: none;
+}
+
 #mainHolder {
   visibility: hidden;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
@@ -882,7 +886,7 @@ sub.pointer:hover {
 .gradient {
   background-image:
     linear-gradient(
-      to top right, 
+      to top right,
       #FFF, #e1e2e1
     );
 }
@@ -903,14 +907,14 @@ float:left;
 }
 
 .report-custom-header .right {
-float:right; padding-top:1%; 
-position: relative; 
-z-index: 88; 
+float:right; padding-top:1%;
+position: relative;
+z-index: 88;
 color: #777
 }
 
 .tooltip > .tooltip-inner {
-    background-color: #979a8d; 
+    background-color: #979a8d;
     border: 1px solid #979a8d;
     padding: 0.3em;
     width: 150%;
@@ -961,7 +965,7 @@ color: #777
   #userSessionsList {
     font-size: 0.85em;
   }
-  
+
   .side {
     height: 27em;
   }
