--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -73,3 +73,9 @@
 </div>
 
 {% endblock %}
+{% block document_ready %}
+$(document).ready(function() {
+    $( "div.portal-item:contains('Registration')" ).addClass("registration-container");
+});
+
+{% endblock %}
