--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -52,7 +52,7 @@ body {
   transition: all 500ms ease-in;
 }
 
-.registration-container {
+#fullSizeBox a[href*="register"] {
   display: none;
 }
 
@@ -925,6 +925,9 @@ color: #777
     border-top: 5px solid #979a8d; ;
 }
 
+.consent {
+  display: none
+}
 
 
 /** Responsive sizes **/
