--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -49,7 +49,6 @@ body {
   font-family: "Helvetica Neue Light", "Helvetica Neue", Arial, sans-serif;
   color: @baseColor;
   font-size: @baseFontSize;
-  transition: all 500ms ease-in;
 }
 
 #fullSizeBox a[href*="register"] {
@@ -73,8 +72,7 @@ body {
 }
 
 #tnthNavWrapper {
-  /*display: none;*/
-  display:block;
+  display: none;
   visibility: hidden;
   -webkit-transition: visibility 0.5s ease-in;
   transition: visibility 0.5s ease-in;
@@ -923,10 +921,6 @@ color: #777
 
 .tooltip.top > .tooltip-arrow {
     border-top: 5px solid #979a8d; ;
-}
-
-.consent {
-  display: none
 }
 
 
